// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarHeader renders with empty props.title 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader renders with title passed 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  >
    SUBSCRIPTIONS
  </MenuHeader>
</MenuItem>
`;

exports[`SideBarHeader should render SidebarHeader 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;
